ec2.tf
#resource "aws_instance" "web" {
# ami                    = "ami-0f5ee92e2d63afc18"
#  instance_type          = var.instance_type
#  subnet_id              = aws_subnet.private.id
#  vpc_security_group_ids = []

#  tags = {
#   Name = "private-ec2"
# }
#}
